crates/cli/tests/snapshots/lib__check@arg_count_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/arg_count_mismatch.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/arg_count_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----
[11] Error: Mismatched arg count. Expected 1 argument, but got 3
   ╭─[ tests/check/arg_count_mismatch.nemo:6:7 ]
   │
 6 │   func(1, 2, 3);
   │       ────┬────  
   │           ╰────── Mismatched arg count. Expected 1 argument, but got 3
───╯

[11] Error: Mismatched arg count. Expected 2 arguments, but got 3
   ╭─[ tests/check/arg_count_mismatch.nemo:7:10 ]
   │
 7 │   i32_rem(1, 2, 3);
   │          ────┬────  
   │              ╰────── Mismatched arg count. Expected 2 arguments, but got 3
───╯


----- stderr -----
Error: "Check failed with 2 errors"
