crates/cli/tests/snapshots/lib__check@cant_infer_empty_array.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/cant_infer_empty_array.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/cant_infer_empty_array.nemo
---
success: false
exit_code: 1
----- stdout -----
[17] Error: Can't infer type of an empty array
   ╭─[ tests/check/cant_infer_empty_array.nemo:2:11 ]
   │
 2 │   let x = []
   │           ─┬  
   │            ╰── Can't infer type of an empty array
───╯


----- stderr -----
Error: "Check failed with 1 errors"
