crates/cli/tests/snapshots/lib__check@duplicate_module_name.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/duplicate_module_name/moda_again.nemo
    - tests/check/duplicate_module_name/moda.nemo
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/duplicate_module_name
---
success: false
exit_code: 101
----- stdout -----

----- stderr -----

thread 'main' panicked at crates/frontend/src/lib.rs:157:13:
not yet implemented: Duplicate module name declared: 'moda'
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
