crates/cli/tests/snapshots/lib__check@field_type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/field_type_mismatch.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/field_type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----
[15] Error: Type mismatch. Expected I32, but got Bool
   ╭─[ tests/check/field_type_mismatch.nemo:6:11 ]
   │
 6 │   F { x = true }
   │           ──┬──  
   │             ╰──── Type mismatch. Expected I32, but got Bool
───╯

[15] Error: Type mismatch. Expected Unit, but got F
   ╭─[ tests/check/field_type_mismatch.nemo:6:3 ]
   │
 6 │   F { x = true }
   │   ───────┬──────  
   │          ╰──────── Type mismatch. Expected Unit, but got F
───╯


----- stderr -----
Error: "Check failed with 2 errors"
