crates/cli/tests/snapshots/lib__check@invalid_literal.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/invalid_literal.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/invalid_literal.nemo
---
success: false
exit_code: 1
----- stdout -----
[02] Error: Invalid literal couldn't be parsed
   ╭─[ tests/check/invalid_literal.nemo:1:12 ]
   │
 1 │ global x = 1000000000000000000000000000000000000000000000000000000000000
   │            ──────────────────────────────┬──────────────────────────────  
   │                                          ╰──────────────────────────────── Invalid literal couldn't be parsed
───╯


----- stderr -----
Error: "Check failed with 1 errors"
