crates/cli/tests/snapshots/lib__check@lambda.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/lambda.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/lambda.nemo
---
success: false
exit_code: 1
----- stdout -----
[15] Error: Type mismatch. Expected I32, but got F32
   ╭─[ tests/check/lambda.nemo:3:14 ]
   │
 3 │       return 10.0;
   │              ──┬─  
   │                ╰─── Type mismatch. Expected I32, but got F32
───╯

[15] Error: Type mismatch. Expected I32, but got F32
   ╭─[ tests/check/lambda.nemo:8:47 ]
   │
 8 │     let wrong_param : fn (I32) -> I32 = \(x : F32) {
   │                                               ─┬─  
   │                                                ╰─── Type mismatch. Expected I32, but got F32
───╯

[15] Error: Type mismatch. Expected I32, but got F32
   ╭─[ tests/check/lambda.nemo:9:14 ]
   │
 9 │       return x + 1.0;
   │              ───┬───  
   │                 ╰───── Type mismatch. Expected I32, but got F32
───╯

[11] Error: Mismatched arg count. Expected 1 argument, but got 2
    ╭─[ tests/check/lambda.nemo:11:47 ]
    │
 11 │ ╭─▶     let wrong_param_count : fn (I32) -> I32 = \(x, y) {
    ┆ ┆   
 13 │ ├─▶     };
    │ │            
    │ ╰──────────── Mismatched arg count. Expected 1 argument, but got 2
────╯


----- stderr -----
Error: "Check failed with 4 errors"
